see #11924 - Java 9 - JDK-6850612 deprecates `Class.newInstance()` ==> replace it by `Class.getConstructor().newInstance()`
git-svn-id: http://josm.openstreetmap.de/svn/trunk@10208 0c6e7542-c601-0410-84e7-c038aed88b3b